--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,6 @@ jobs:
     steps:
       - name: Deploy
         run: |
-          ssh ${{ secrets.USERNAME }}@${{ secrets.PASSWORD }}
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }}
+          ${{ secrets.PASSWORD }}
           dir
