--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,9 @@ jobs:
     
     steps:
       - name: Deploy
-        run: |
+      - run: |
           ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }}
+      - run: |
           ${{ secrets.PASSWORD }}
+      - run: |
           dir
