--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,7 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd cicdtest
+            docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }}
             dir
+            docker pull testcicd:latest
+            docker compose up -d
