--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,11 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd cicdtest
-            docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }}
+            
+            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            
             dir
+            
             docker pull testcicd:latest
+            
             docker compose up -d
