--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
     
     steps:
       - name: SSH
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@0.1.3
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
