--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,21 +35,37 @@ jobs:
     
     steps:
       - name: SSH
-        uses: appleboy/ssh-action@v0.1.3
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
-          script: |
-            cd cicdtest &
+#         uses: appleboy/ssh-action@v0.1.3
+        run: |
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }}
+          
+          ${{ secrets.PASSWORD }}
+          
+          cd cicdtest;
             
-            dir &
+          dir;
             
-            docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }} &
+          docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }};
             
-            dir &
+          dir;
             
-            docker pull testcicd:latest &
+          docker pull testcicd:latest;
             
-            docker compose up -d
+          docker compose up -d
+#         with:
+#           host: ${{ secrets.HOST }}
+#           username: ${{ secrets.USERNAME }}
+#           password: ${{ secrets.PASSWORD }}
+#           port: ${{ secrets.PORT }}
+#           script: |
+#             cd cicdtest &
+            
+#             dir &
+            
+#             docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }} &
+            
+#             dir &
+            
+#             docker pull testcicd:latest &
+            
+#             docker compose up -d
