--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,21 +37,8 @@ jobs:
       - name: SSH
 #         uses: appleboy/ssh-action@v0.1.3
         run: |
-          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }}
-          
-          ${{ secrets.PASSWORD }}
-          
-          cd cicdtest;
-            
-          dir;
-            
-          docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }};
-            
-          dir;
-            
-          docker pull testcicd:latest;
-            
-          docker compose up -d
+          echo "test";
+          echo "test1";
 #         with:
 #           host: ${{ secrets.HOST }}
 #           username: ${{ secrets.USERNAME }}
