--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,18 +42,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            echo "test" |
-            
-            echo "test1" |
-            
-            cd cicdtest |
-            
-            dir |
-            
-            docker login -u=${{ secrets.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }} &
-            
-            dir &
-            
-            docker pull testcicd:latest &
-            
-            docker compose up -d &
+            whoami
+            ls -al
