--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,31 +7,31 @@ on:
     branches: [ "main" ]
 
 jobs:
-#   PushToDockerHub:
-#     name: PushToDockerHub
-#     runs-on: ubuntu-latest
+  PushToDockerHub:
+    name: PushToDockerHub
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-#       - name: Login to Docker Hub
-#         uses: docker/login-action@v2
-#         with:
-#           username: ${{ secrets.DOCKERHUB_USERNAME }}
-#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-#       - name: Build and push to Docker Hub
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: .
-#           push: true
-#           tags: ${{ secrets.DOCKERHUB_USERNAME }}/testcicd:latest
+      - name: Build and push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/testcicd:latest
         
   Deploy:
     name: Deploy
     runs-on: ubuntu-latest
-#     needs: PushToDockerHub
+    needs: PushToDockerHub
     
     steps:
       - name: SSH
