--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,24 @@ on:
     branches: [ "main" ]
 
 jobs:
+  Test:
+    name: Test
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: Install deps
+        run: yarn install
+        
+      - name: Test
+        run: yarn test:integration:ci
+        
   PushToDockerHub:
     name: PushToDockerHub
     runs-on: ubuntu-latest
+    needs: Test
 
     steps:
       - name: Checkout
