--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,32 @@
 version: "3.8"
 services:
 
-  app:
-    image: brarion/testcicd
+  postgres:
+    image: postgres:13
+    container_name: postgres_cicd
     restart: always
     ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: pass
+      POSTGRES_DB: db
+    networks:
+      little-project-network:
+        ipv4_address: 10.5.0.3
+
+  app:
+    build: brarion/testcicd
+    restart: always
+    depends_on:
+      - postgres
+    env_file:
+      - ./.env
+    environment:
+      PRODUCT_DB: postgres://user:pass@10.5.0.3:5432/db
+    ports:
       - "8000:8000"
-    command: yarn start
+    command: yarn ci:start
     networks:
       little-project-network:
         ipv4_address: 10.5.0.2
