--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
   "author": "Prokopenko Nikolai",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^4.13.0",
+    "@prisma/migrate": "^4.13.0",
+    "express": "^4.18.2",
+    "prisma": "^4.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/jest": "^29.5.1",
     "@types/node": "^18.11.18",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.4",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.2",
@@ -30,7 +38,10 @@
     "start": "node --trace-warnings ./dist/index.js",
     "migrate:dev": "yarn prisma migrate dev",
     "migrate:generate": "yarn prisma generate",
-    "docker:start": "yarn build && yarn start"
+    "docker:start": "yarn build && yarn start",
+    "ci:start": "yarn prisma migrate deploy && yarn start",
+    "test:integration": "docker-compose -f docker-compose.test.yml up -d && jest --maxWorkers=1",
+    "test:integration:ci": "docker-compose up -d && jest --maxWorkers=1"
   },
   "prisma": {
     "schema": "./src/prisma/schema.prisma"
