--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,24 @@ on:
     branches: [ "main" ]
 
 jobs:
+  Build:
+    name: Build
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install deps
+        run: yarn install
+        
+      - name: Build
+        run: yarn build
+        
   Test:
     name: Test
     runs-on: ubuntu-latest
+    needs: Build
     
     steps:
       - name: Checkout
