--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,7 @@ http {
   upstream auth_app {
     server 172.21.0.3:8000;
     server 172.21.0.4:8000;
+    server 172.21.0.5:8000;
   }
 
   gzip on;
